--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=6910
+socket-server.port=6920
+socket-server.host=localhost
 
 spring.datasource.url=jdbc:mysql://localhost:3307/aggregatemessagedb?serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
