--- a/ui/package.json
+++ b/ui/package.json
@@ -27,11 +27,12 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-stomp": "^5.1.0",
-    "socket.io-client": "^4.7.5",
+    "socket.io-client": "^2.3.0",
     "socket.js": "^0.1.4",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
