--- a/api/build.gradle
+++ b/api/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.765'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql:42.6.0'
     annotationProcessor 'org.projectlombok:lombok'
