--- a/aggregate_messenger_telegram_api/package.json
+++ b/aggregate_messenger_telegram_api/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^1.7.8",
     "body-parser": "^1.20.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
