--- a/ai-api/build.gradle
+++ b/ai-api/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'dev.langchain4j:langchain4j:0.33.0'
     implementation 'dev.langchain4j:langchain4j-hugging-face:0.33.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.4'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
