--- a/ai-api/src/main/resources/application.properties
+++ b/ai-api/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=8080
+
+huggingface.api.key=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
+huggingface.api.url= https://api-inference.huggingface.co/models/microsoft/Phi-3-mini-4k-instruct
+management.endpoints.web.exposure.include=env,beans
+
