--- a/api/build.gradle
+++ b/api/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.765'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator:3.1.2'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql:42.6.0'
     annotationProcessor 'org.projectlombok:lombok'
