--- a/ui/package.json
+++ b/ui/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toolbar": "^1.1.0",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.4",
@@ -29,6 +30,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-international-phone": "^4.3.0",
     "react-phone-input-2": "^2.15.1",
